updating plugin interface